--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "vuedraggable": "^4.0.2"
   },
   "devDependencies": {
+    "@iconify-json/heroicons-outline": "^1.1.1",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@types/node": "^17.0.24",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
