--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "unplugin-icons": "^0.14.3",
     "unplugin-vue-components": "^0.19.5",
     "vite": "^2.9.9",
+    "vite-plugin-vue-type-imports": "^0.1.3",
     "vitest": "^0.12.4"
   },
   "resolutions": {
