--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_HUB_URL=http://localhost:8000
+VITE_HUB_URL=https://testnet.snapshot.org
 VITE_RELAYER_URL=https://testnet.snapshot.org
 VITE_SCORES_URL=https://score.snapshot.org
 VITE_IPFS_GATEWAY=gateway.ipfs.io
