Select base branch from github actions

--- a/.github/workflows/update-snapshot-packages.yml
+++ b/.github/workflows/update-snapshot-packages.yml
@@ -2,6 +2,15 @@ name: Update Snapshot packages
 
 on:
  workflow_dispatch:
+   inputs:
+      branchName:
+        description: 'Base Branch'
+        required: true
+        default: 'develop' 
+        type: choice
+        options:
+        - develop
+        - stable
  schedule:
    - cron: 0 * * * *
 
@@ -10,6 +19,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.inputs.branchName || 'develop' }
       - uses: actions/setup-node@v1
         with:
           node-version: '14.x'
