--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ethersproject/strings": "^5.5.0",
     "@ethersproject/units": "^5.6.1",
     "@ethersproject/wallet": "^5.6.1",
+    "@headlessui/vue": "^1.6.4",
     "@popperjs/core": "^2.11.5",
     "@pusher/push-notifications-web": "^1.1.0",
     "@snapshot-labs/lock": "^0.1.8",
@@ -53,6 +54,7 @@
   },
   "devDependencies": {
     "@iconify-json/heroicons-outline": "^1.1.1",
+    "@tailwindcss/forms": "^0.5.2",
     "@tailwindcss/line-clamp": "^0.4.0",
     "@types/node": "^17.0.38",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
