--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ethersproject/bignumber": "^5.6.1",
     "@ethersproject/bytes": "^5.4.0",
     "@ethersproject/providers": "^5.6.8",
+    "@ethersproject/random": "^5.6.1",
     "@ethersproject/solidity": "^5.6.1",
     "@ethersproject/strings": "^5.5.0",
     "@ethersproject/units": "^5.6.1",
@@ -38,6 +39,7 @@
     "@headlessui/vue": "^1.6.5",
     "@popperjs/core": "^2.11.5",
     "@pusher/push-notifications-web": "^1.1.0",
+    "@shutter-network/shutter-crypto": "^0.1.0-beta.1",
     "@snapshot-labs/lock": "^0.1.91",
     "@snapshot-labs/pineapple": "^0.1.0-beta.1",
     "@snapshot-labs/snapshot.js": "^0.4.0",
