--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@headlessui/vue": "^1.6.7",
     "@popperjs/core": "^2.11.5",
     "@pusher/push-notifications-web": "^1.1.0",
-    "@shutter-network/shutter-crypto": "^0.1.0-beta.1",
+    "@shutter-network/shutter-crypto": "0.1.0-beta.3",
     "@snapshot-labs/lock": "^0.1.92",
     "@snapshot-labs/pineapple": "^0.1.0-beta.1",
     "@snapshot-labs/snapshot.js": "^0.4.10",
@@ -92,9 +92,9 @@
     "sass-loader": "^13.0.1",
     "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.1.6",
+    "unplugin-icons": "^0.14.7",
     "unplugin-vue-components": "^0.21.1",
     "vite": "^2.9.14",
-    "unplugin-icons": "^0.14.7",
     "vitest": "^0.18.1",
     "vitest-fetch-mock": "^0.2.1"
   },
